# explainable-nli-hallucination-verifier

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  run.cmd  run.ps1
.github/workflows/: ci.yml
evaluation/: adversarial_cases.jsonl
examples/: evidence.csv  evidence.jsonl  evidence.txt
src/verinli/: __init__.py  api.py  calibration.py  claims.py  cli.py  ingestion.py  models.py  nli.py  pipeline.py  reporting.py  retrieval.py
src/verinli/web/: __init__.py  index.html
tests/: test_adversarial.py  test_api.py  test_calibration.py  test_ingestion.py  test_pipeline.py  test_reporting.py  test_retrieval.py
