[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verinli"
version = "0.3.0"
description = "Explainable NLI pipeline for evidence-grounded hallucination verification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Saroswat Roy"}]
dependencies = ["pydantic>=2.7", "typer>=0.12"]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.30"]
ml = ["transformers>=4.44", "torch>=2.2", "sentence-transformers>=3.0"]
dev = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5",
    "ruff>=0.5",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/Saroswat/explainable-nli-hallucination-verifier"
Repository = "https://github.com/Saroswat/explainable-nli-hallucination-verifier"
Issues = "https://github.com/Saroswat/explainable-nli-hallucination-verifier/issues"

[project.scripts]
verinli = "verinli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/verinli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=verinli --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["verinli"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "verinli.api"
disallow_untyped_decorators = false
